--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -28,6 +28,7 @@ sp-std = { version = "4.0.0-dev", default-features = false, git = "https://githu
 log = { version = "0.4.17", default-features = false }
 serde = { version = '1.0', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
+serde_bytes = { version = '0.11', default-features = false, features = ['alloc'] }
 
 
 [dev-dependencies]
